--- a/res/layout-large/main.xml
+++ b/res/layout-large/main.xml
@@ -7,7 +7,7 @@
       android:layout_height="fill_parent"
       android:scaleType="fitXY"
       android:src="@drawable/background"/>
-	<com.measuredsoftware.android.timer.TimerView  
+	<com.measuredsoftware.android.timer.views.TimerView  
       android:id="@+id/the_dial"
 	    android:layout_width="wrap_content" 
 	    android:layout_height="wrap_content"
