--- a/res/layout/top_bar.xml
+++ b/res/layout/top_bar.xml
@@ -4,21 +4,23 @@
     <com.measuredsoftware.android.timer.views.TintedImageButton
         android:id="@+id/settings_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:background="@null"
         android:layout_marginLeft="@dimen/top_bar_button_margin"
+        android:background="@null"
+        android:scaleType="center"
         android:src="@drawable/settings_icon" />
 
     <com.measuredsoftware.android.timer.views.TintedImageButton
         android:id="@+id/measured_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:background="@null"
         android:layout_marginRight="@dimen/top_bar_button_margin"
+        android:background="@null"
+        android:scaleType="center"
         android:src="@drawable/mslogo_icon" />
 
 </merge>
