--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -5,4 +5,7 @@
     <dimen name="timers_list_margin">10dp</dimen>
     <dimen name="top_bar_button_margin">10dp</dimen>
     <dimen name="timer_margin">20dp</dimen>
+    <dimen name="cancel_button_padding">10dp</dimen>
+    <dimen name="countdown_text_size">24sp</dimen>
+    <dimen name="target_text_size">20sp</dimen>
 </resources>
