--- a/res/layout/active_timer.xml
+++ b/res/layout/active_timer.xml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android" 
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto" >
 
     <com.measuredsoftware.android.timer.views.TimerTextView
         android:id="@+id/target_time"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_marginRight="@dimen/target_time_button_margin_left"
+        android:layout_centerVertical="true"
         android:textSize="@dimen/target_text_size"
-        app:textType="target"
-        android:layout_centerVertical="true"/>
+        app:textType="target" />
 
     <com.measuredsoftware.android.timer.views.TimerTextView
         android:id="@+id/countdown_time"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_centerInParent="true"
         android:textSize="@dimen/countdown_text_size"
-        app:textType="countdown"
-        android:layout_centerInParent="true"/>
+        app:textType="countdown" />
 
     <com.measuredsoftware.android.timer.views.CancelButton
         android:id="@+id/cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/cancel_button_padding"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="@dimen/cancel_button_margin_right"
         android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"/>
-    
+        android:padding="@dimen/cancel_button_padding" />
+
 </merge>
