--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -8,4 +8,7 @@
     <dimen name="cancel_button_padding">10dp</dimen>
     <dimen name="countdown_text_size">24sp</dimen>
     <dimen name="target_text_size">20sp</dimen>
+    <dimen name="active_timer_height">80dp</dimen>
+    <dimen name="target_time_button_margin_left">10dp</dimen>
+    <dimen name="cancel_button_margin_right">10dp</dimen>
 </resources>
