--- a/res/layout/active_timer.xml
+++ b/res/layout/active_timer.xml
@@ -21,7 +21,7 @@
         app:textType="countdown" />
 
     <com.measuredsoftware.android.timer.views.CancelButton
-        android:id="@+id/cancel"
+        android:id="@+id/cancel_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
