--- a/res/layout/app.xml
+++ b/res/layout/app.xml
@@ -26,7 +26,7 @@
             android:src="@drawable/background" />
 
         <com.measuredsoftware.android.timer.views.TimerView
-            android:id="@+id/timer"
+            android:id="@+id/the_dial"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -39,7 +39,7 @@
             android:id="@+id/timer_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@id/timer"
+            android:layout_above="@id/the_dial"
             android:layout_gravity="center_vertical"
             android:layout_marginBottom="@dimen/timers_list_margin"
             android:layout_marginTop="@dimen/timers_list_margin"
