--- a/res/layout/active_timer.xml
+++ b/res/layout/active_timer.xml
@@ -7,17 +7,18 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="@dimen/target_time_button_margin_left"
+        android:gravity="center"
+        android:layout_marginLeft="@dimen/target_time_button_margin_left"
         android:clickable="false"
         android:textSize="@dimen/target_text_size"
         app:textType="target" />
 
     <com.measuredsoftware.android.timer.views.TimerTextView
         android:id="@+id/countdown_time"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
+        android:gravity="center"
         android:clickable="false"
         android:textSize="@dimen/countdown_text_size"
         app:textType="countdown" />
