--- a/res/layout/top_bar.xml
+++ b/res/layout/top_bar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android" >
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto" >
 
     <com.measuredsoftware.android.timer.views.TintedImageButton
         android:id="@+id/settings_button"
@@ -13,6 +14,19 @@
         android:src="@drawable/settings_icon" />
 
     <com.measuredsoftware.android.timer.views.TintedImageButton
+        android:id="@+id/hue_button"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_toRightOf="@id/settings_button"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="@dimen/top_bar_button_margin"
+        android:background="@null"
+        android:scaleType="center"
+        app:upTintType="desat"
+        app:downTintType="none"
+        android:src="@drawable/hue_icon" />
+
+    <com.measuredsoftware.android.timer.views.TintedImageButton
         android:id="@+id/measured_button"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -22,13 +36,13 @@
         android:background="@null"
         android:scaleType="center"
         android:src="@drawable/mslogo_icon" />
-    
-    <ImageView 
+
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/top_bar_image"
         android:layout_centerInParent="true"
         android:background="@null"
-        android:scaleType="center"/>
+        android:scaleType="center"
+        android:src="@drawable/top_bar_image" />
 
 </merge>
