--- a/res/values-normal-xhdpi/dimens.xml
+++ b/res/values-normal-xhdpi/dimens.xml
@@ -20,4 +20,6 @@
     <dimen name="stop_button_text_size">50dp</dimen>
     
     <dimen name="hue_slider_margin">10dp</dimen>
+    
+    <dimen name="touch_glow_hyp">115dp</dimen>
 </resources>
