--- a/res/values-sw600dp/dimens.xml
+++ b/res/values-sw600dp/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="top_bar_height">75dp</dimen>
     <dimen name="timers_list_margin">6dp</dimen>
     <dimen name="top_bar_button_margin">13dp</dimen>
+    <dimen name="timer_margin">14dp</dimen>
     <dimen name="cancel_button_padding">0dp</dimen>
     <dimen name="countdown_text_size">24sp</dimen>
     <dimen name="target_text_size">20sp</dimen>
